# ComfyUI-FirstOrderMM

./: .gitignore  FOMM.json  README.md  __init__.py  articulate_inference.py  constants.py  fomm_inference.py  fomm_loader.py  inference_articulate.py  inference_fomm.py  inference_fsrt.py  inference_mrfa.py  inference_partswap.py  inference_spline.py  part_swap.py  partswap_inference.py  partswap_loader.py  partswap_model.py  pyproject.toml  requirements.txt  run.py  seg_viz.py  spline_inference.py  utils.py
articulate_module/: pixelwise_flow_predictor.py
face_parsing/: face_parsing_loader.py  face_parsing_model.py  resnet.py
module_articulate/: batchnorm.py  bg_motion_predictor.py  generator.py  region_predictor.py  util.py  visualizer.py
module_fsrt/: checkpoint.py  decoder.py  encoder.py  expression_encoder.py  keypoint_detector.py  layers.py  model.py  small_decoder.py
module_mrfa/: dense_motion.py  generator.py  kp_detector.py  model.py  raft.py  util.py
module_mrfa/transformer/: hr_base.py  pose_tokenpose_b.py  tokenpose_base.py
module_spline/: dense_motion.py  inpainting_network.py
modules/: dense_motion.py  generator.py  keypoint_detector.py  model.py  reconstruction_module.py  segmentation_module.py  util.py
samples/: sample_output.webm
spline_module/: model.py
sync_batchnorm/: __init__.py
workflows/: ARTICULATE.json  FOMM_PARTSWAP.json  FSRT.json  MRFA.json  SPLINE.json
