[project]
name = "comfyui-firstordermm"
description = "A ComfyUI-native node to run First Order Motion Model for Image Animation. [a/https://github.com/AliaksandrSiarohin/first-order-model](https://github.com/AliaksandrSiarohin/first-order-model)"
version = "1.0.2"
license = { file = "LICENSE" }
dependencies = ["numpy", "torch", "scipy", "yaml", "matplotlib"]

[project.urls]
Repository = "https://github.com/FuouM/ComfyUI-FirstOrderMM"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fuoumarinas"
DisplayName = "ComfyUI-FirstOrderMM"
Icon = ""
